--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://MukeshMhanta02.github.io/React-Login",
+  "homepage": "http://mukeshmhanta02.github.io/React-Login",
   "name": "websynergies2013",
   "version": "0.1.0",
   "private": true,
